{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 190,
  "lineage": "4469c2e7-68b8-f921-32b9-4ccd73bc87b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:769408743227:vpc/vpc-0708f7a19e209b8cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0fe12134063d1a859",
            "default_route_table_id": "rtb-01c240eef2571c487",
            "default_security_group_id": "sg-01eb83f94e37eccc7",
            "dhcp_options_id": "dopt-00c2c1b7a0194d0a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0708f7a19e209b8cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c240eef2571c487",
            "owner_id": "769408743227",
            "tags": {
              "Name": "Default Vpc"
            },
            "tags_all": {
              "Name": "Default Vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9f6711ffab1b546",
            "association_id": "eipassoc-0efa412e2001d8d36",
            "domain": "vpc",
            "id": "eipalloc-0f9f6711ffab1b546",
            "instance": "i-0a1dd88b8b5ab98d3",
            "network_border_group": "us-east-2",
            "network_interface": "eni-089f9310aa203bfe1",
            "private_dns": "ip-172-31-37-142.us-east-2.compute.internal",
            "private_ip": "172.31.37.142",
            "public_dns": "ec2-3-12-96-178.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.96.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "eip-test0"
            },
            "tags_all": {
              "name": "eip-test0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.test",
            "aws_key_pair.keypair",
            "aws_security_group.allow_ports"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05847ebddeda58f26",
            "association_id": "eipassoc-05822d8edc2599673",
            "domain": "vpc",
            "id": "eipalloc-05847ebddeda58f26",
            "instance": "i-0c68da596e15e0e9c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-08267c167155d6af5",
            "private_dns": "ip-172-31-46-63.us-east-2.compute.internal",
            "private_ip": "172.31.46.63",
            "public_dns": "ec2-18-118-64-13.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.64.13",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "eip-test1"
            },
            "tags_all": {
              "name": "eip-test1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.test",
            "aws_key_pair.keypair",
            "aws_security_group.allow_ports"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0960ab670c8bb45f3",
            "arn": "arn:aws:ec2:us-east-2:769408743227:instance/i-0a1dd88b8b5ab98d3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1dd88b8b5ab98d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "firsttf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-089f9310aa203bfe1",
            "private_dns": "ip-172-31-37-142.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.142",
            "public_dns": "ec2-13-59-156-190.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.156.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04618011ee56bbdc4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "alb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c5dde760d07c986",
            "tags": {
              "name": "harish0"
            },
            "tags_all": {
              "name": "harish0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c450f59089dd3f7f"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.allow_ports"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0960ab670c8bb45f3",
            "arn": "arn:aws:ec2:us-east-2:769408743227:instance/i-0c68da596e15e0e9c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c68da596e15e0e9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "firsttf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08267c167155d6af5",
            "private_dns": "ip-172-31-46-63.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.46.63",
            "public_dns": "ec2-18-221-127-138.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.127.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e7c727a4505d7ea8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "alb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c5dde760d07c986",
            "tags": {
              "name": "harish1"
            },
            "tags_all": {
              "name": "harish1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c450f59089dd3f7f"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.allow_ports"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-aws-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:loadbalancer/app/harishtest-alb/db3aa4cabc145084",
            "arn_suffix": "app/harishtest-alb/db3aa4cabc145084",
            "desync_mitigation_mode": "defensive",
            "dns_name": "harishtest-alb-783759778.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:769408743227:loadbalancer/app/harishtest-alb/db3aa4cabc145084",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "harishtest-alb",
            "security_groups": [
              "sg-0c450f59089dd3f7f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e884a7fb6717b7a"
              },
              {
                "subnet_id": "subnet-05c5dde760d07c986"
              },
              {
                "subnet_id": "subnet-07656d27d5f45b5af"
              }
            ],
            "subnets": [
              "subnet-04e884a7fb6717b7a",
              "subnet-05c5dde760d07c986",
              "subnet-07656d27d5f45b5af"
            ],
            "tags": {
              "Name": "harish-test-alb"
            },
            "tags_all": {
              "Name": "harish-test-alb"
            },
            "vpc_id": "vpc-0708f7a19e209b8cd",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.allow_ports",
            "data.aws_subnet_ids.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "harish-test-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:listener/app/harishtest-alb/db3aa4cabc145084/8b42118f198410a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:targetgroup/my-test-tg/578d0e5d096088e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:769408743227:listener/app/harishtest-alb/db3aa4cabc145084/8b42118f198410a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:loadbalancer/app/harishtest-alb/db3aa4cabc145084",
            "port": 9090,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.my-aws-alb",
            "aws_lb_target_group.test",
            "aws_security_group.allow_ports",
            "data.aws_subnet_ids.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "harish-test-alb-listner1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:listener/app/harishtest-alb/db3aa4cabc145084/4a14ad8c5a3abe7a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:targetgroup/my-test-tg/578d0e5d096088e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:769408743227:listener/app/harishtest-alb/db3aa4cabc145084/4a14ad8c5a3abe7a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:loadbalancer/app/harishtest-alb/db3aa4cabc145084",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.my-aws-alb",
            "aws_lb_target_group.test",
            "aws_security_group.allow_ports",
            "data.aws_subnet_ids.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "harish-test-alb-listner2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:listener/app/harishtest-alb/db3aa4cabc145084/dc8801e151456e96",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:targetgroup/my-test-tg/578d0e5d096088e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:769408743227:listener/app/harishtest-alb/db3aa4cabc145084/dc8801e151456e96",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:loadbalancer/app/harishtest-alb/db3aa4cabc145084",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.my-aws-alb",
            "aws_lb_target_group.test",
            "aws_security_group.allow_ports",
            "data.aws_subnet_ids.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:targetgroup/my-test-tg/578d0e5d096088e6",
            "arn_suffix": "targetgroup/my-test-tg/578d0e5d096088e6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:769408743227:targetgroup/my-test-tg/578d0e5d096088e6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-test-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0708f7a19e209b8cd"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:769408743227:targetgroup/my-test-tg/578d0e5d096088e6-20220829131036747500000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:targetgroup/my-test-tg/578d0e5d096088e6",
            "target_id": "i-0a1dd88b8b5ab98d3"
          },
          "dependencies": [
            "aws_instance.test",
            "aws_key_pair.keypair",
            "aws_lb_target_group.test",
            "aws_security_group.allow_ports"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:769408743227:targetgroup/my-test-tg/578d0e5d096088e6-20220829131036647600000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:769408743227:targetgroup/my-test-tg/578d0e5d096088e6",
            "target_id": "i-0c68da596e15e0e9c"
          },
          "dependencies": [
            "aws_instance.test",
            "aws_key_pair.keypair",
            "aws_lb_target_group.test",
            "aws_security_group.allow_ports"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:769408743227:security-group/sg-0c450f59089dd3f7f",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c450f59089dd3f7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "769408743227",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ports"
            },
            "tags_all": {
              "Name": "allow_ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-0708f7a19e209b8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}